--- a/artikulua.tex
+++ b/artikulua.tex
@@ -656,7 +656,7 @@ Table \ref{tab:tab harr hld} shows the five main subgroups derived from the grap
 
 \subsection{Relationships in the Young Subgraph}\label{sec:relat-young-subgr}
 
-Regarding to \textbf{young} people's graph subgroups (table \ref{tab:tab harr gzt}), it can be seen that there are similarities and differences with the adult graph. Focusing on the similarities, it can be seen that \textit{Basque language}, \textit{Nationalist left} and \textit{News} are important subgroups in both graphs. These common subgroups can be related to politics and immediacy, which are the basic characteristics of Twitter identity. On the other hand, taking into account the differences, it should be noted that groups related to leisure also take a central stage, such as \textit {Sports} and \textit{Music}. To finish, it is worth pointing out that in this case young Basque speakers also take Twitter as a channel to comment on everyday life, in which case the different subgroups are related to close events.
+The subgroups in the graph of \textbf{young} users (see Table \ref{tab:tab harr gzt}) display both similarities and differences with respect to the adult graph.
 
 \begin{table}[H]
   \centering
@@ -672,28 +672,22 @@ Regarding to \textbf{young} people's graph subgroups (table \ref{tab:tab harr gz
   \label{tab:tab harr gzt}
 \end{table}
 
+Focusing on the similarities, \textit{Basque language}, \textit{Nationalist left} and \textit{News} are important subgroups in both graphs. These common subgroups can be related to politics and immediacy, which are basic characteristics of identity in Twitter. With respect to the differences, it noticeable that subgroups related to leisure take a more central stage, such as \textit {Sports} and \textit{Music}. To finish, it is worth pointing out that young Basque users take Twitter as a channel to comment on everyday issues. The main topics in each of the subgroups within the young users graphs are the following:
 
 \begin{itemize}
-\item \textit{Sports} (21,61 \%): This subgroup, which includes most of the nodes of the youth model, is related to sports. The group would be made up of sports teams or organizations (@RealSociety, @RealSociedadEUS, @ASPEpelota, @SDEibar ...), as well as its athletes (@InigoMartinez, @AmetsTxurruka, @XabierUsabiaga, @Markelirizar ...). However, the most important nodes are sports journalists (@iBROKI, @XabierEuzkitze, @Imagreto, @bzarrabeitia, @TxetxuUbieta...) and the media (@berria, @euskaltelebista, @eitbkirolak, @euskadi\_irratia...). Once again, it can be clearly seen that, despite being the subgroup of sports, the media are the real protagonists.
+\item \textbf{Sports} (21.61\%): This subgroup, which includes most of the nodes which are considered roles models for the youths, is related to sports. The group is be made up of sports teams or organizations (@RealSociety, @RealSociedadEUS, @ASPEpelota, @SDEibar ...), as well as its athletes (@InigoMartinez, @AmetsTxurruka, @XabierUsabiaga, @Markelirizar ...). However, the most important nodes are sports journalists (@iBROKI, @XabierEuzkitze, @Imagreto, @bzarrabeitia, @TxetxuUbieta...) and the media (@berria, @euskaltelebista, @eitbkirolak, @euskadi\_irratia...). Once again, it can be clearly seen that the newspapers and TV media are the most important nodes.
+
+\item \textbf{Basque language} (20.70\%): A fifth of all the nodes are in this subgroup. The most important ones are those directly related to the Basque language (@EsaldiakEuskara, @euskarazEH, @Bertsotan, @bertsolaritza, @Euskeraz\_Bizi ...). In the adult graph it was also found a community related to this topic, although the most important nodes are markedly different.
+
+\item \textbf{Nationalist left} (17.12\%): This third group, composed of nodes related to the nationalist left, is perhaps the most similar in both adult and young graphs. For example, media (@naiz\_info, @topatu\_eus, @inform7irratia, @naizplus...), organizations (@ernaigazte, @ehbildu, @sortuEH...) and individuals (@ArnaldoOtegi, @lauramintegi...) related to the nationalist left, appear in both subgroups.
+
+\item \textbf{News} (14.92\%): As in the previous subgroup, this community is also very similar for both young and adult users. The most important nodes correspond to general news Basque media (@argia, @HamaikaTb, @eitb Albums, @zuzeu, @Gaztezulo).
+
+\item \textbf{Music} (11.35\%): In this final subgroup, although quite heterogeneous, it can be said that the most important nodes are related to music. Among these, the music related media (@gaztea, @DidaGaztea), music bands (@berritxarrak, @muguruzafm, @Glaukomaband), as well as record companies (@BagaBigaeus) are the main nodes.
+
 \end{itemize}
 
-\begin{itemize}
-\item \textit{Basque language} (20,70 \%): In this second subgroup, we would have a fifth of all the nodes, being a large group. In this case, the most important nodes are related to the Basque language (@EsaldiakEuskara, @euskarazEH, @Bertsotan, @bertsolaritza, @Euskeraz\_Bizi ...). In subgroups of adults, a community related to this topic has also been found, although the nodes are different, the topic coincides.
-\end{itemize}
-
-\begin{itemize}
-\item \textit{Nationalist left} (17,12 \%): This third group would be composed of nodes related to the nationalist left. For example, media (@naiz\_info, @topatu\_eus, @inform7irratia, @naizplus...), organizations (@ernaigazte, @ehbildu, @sortuEH...) and individuals (@ArnaldoOtegi, @lauramintegi...) related to the nationalist left. Once again, it can be seen that there are similarities with subgroups of adults, very similar in this particular case both in the topic and in the nodes.
-\end{itemize}
-
-\begin{itemize}
-\item \textit{News} (14,92 \%): In the fourth subgroup, it can be seen that the most important nodes correspond to Basque media (@argia, @HamaikaTb, @eitb Albums, @zuzeu, @Gaztezulo). Once again, It can be seen that there are some similarities between young people and adults.
-\end{itemize}
-
-\begin{itemize}
-\item \textit{Music} (11,35 \%): In the final subgroup, although it is quite diverse, it can be said that the most important nodes are related to music. Among these, the media that talk about music (@gaztea, @DidaGaztea), music groups (@berritxarrak, @muguruzafm, @Glaukomaband), as well as some record companies (@BagaBigaeus).
-\end{itemize}
-
-Once the subgroups of both models have been interpreted and defined, a comparison between the two has been done. It can be seen (table \ref{tab:taldeak}), both adults and young people, even though they have different preferences in their relationship, they have a common part. On the one hand, the political nature and immediacy of this social network would be a common part, even if it is more noticeable for adults. Additionally, it should be pointed out that in most subgroups, media-related users play an important role, confirming the informative nature of Twitter. On the other hand, we must emphasize that Basque users use Basque language, especially to talk about events or topics around them, linked to the context of the Basque Country. To conclude, it must be said that the community of Basque tweeters, apart from sharing the general characteristics of Twitter (immediacy and political character), has its own peculiarity, to use Basque language to speak about Basque topics.
+To finish this section, Table \ref{tab:taldeak} offers an overview of the main subgroups per type of user. Both graphs create communities related to political and social issues, although it is more important for the graph of young users. Moreover, in both types of users Basque language is an important subgroup and it shows that users write in Basque mostly about issues or topics directly related to the Basque Country. The main difference between both types of users is the importance of the sports subgroup which is not present in the graph of adult users. This shows the influence of sports celebrities as role models among young people.
 
 \begin{table}[H]
            \centering
@@ -701,34 +695,28 @@ Once the subgroups of both models have been interpreted and defined, a compariso
           \captionsetup[table]{position=top}
            \begin{subtable}{0.45\linewidth}
                \centering
-               \begin{tabular}{|l|c|}
-                   \hline
-                   \textbf{Adult people subgroups} & \textbf{Number of nodes} \\ \hline
-                   Nationalist left & 27,92 \% \\ \hline
-                   News & 23,77 \% \\ \hline
-                   Basque language & 15,34 \% \\ \hline
-                   Music and GED & 13,56 \% \\ \hline
-                   Basque tweeters & 13,10 \% \\ \hline
+               \begin{tabular}{lc}\hline
+                   Subgroups in graph of adult users & \% of nodes \\ \hline \hline
+                   Nationalist left & 27.92 \\
+                   News & 23.77 \\
+                   Basque language & 15.34 \\
+                   Music and GED & 13.56 \\
+                   Basque tweeters & 13.10 \\ \hline
                \end{tabular}
-               \caption{Relationship communities of adult people.}
-               \label{tab:heldu talde}
            \end{subtable}%
            \hspace*{4em}
            \begin{subtable}{0.45\linewidth}
                \centering
-               \begin{tabular}{|l|c|}
-                   \hline
-                   \textbf{Young people subgroups} & \textbf{Number of nodes} \\ \hline
-                   Sports & 21,61 \% \\ \hline
-                   Basque language & 20,70 \% \\ \hline
-                   Nationalist left & 17,12 \% \\ \hline
-                   News & 14,92 \% \\ \hline 
-                   Music & 11,35 \% \\ \hline
+               \begin{tabular}{lc}\hline
+                   Subgroups in graph of young users & \% of nodes \\ \hline \hline
+                   Sports & 21.61 \\
+                   Basque language & 20.70 \\
+                   Nationalist left & 17.12 \\
+                   News & 14.92 \\
+                   Music & 11.35 \\ \hline
                \end{tabular}
-                \caption{Relationship communities of young people.}
-                 \label{tab:gazte talde}
            \end{subtable}
-           \caption{Relationship communities in each model.}
+           \caption{Communities in each graph of users.}
            \label{tab:taldeak}
        \end{table}
 
