title and abstract done

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -70,7 +70,7 @@
 
 %=================================================================
 % Full title of the paper (Capitalized)
-\Title{Basque language in Twitter, frequent topics and relationships of young and adult users}
+\Title{Large Scale Linguistic Processing of Tweets to Understand Social Interactions among Speakers of Less Resourced Languages: The Basque Case}
 
 % Authors, for the paper (add full first names)
 \Author{Joseba Fernandez de Landa, Rodrigo Agerri* and I\~naki Alegria}
@@ -95,10 +95,10 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 %\simplesumm{} % Simple summary
 
 % Abstract (Do not insert blank lines, i.e. \\)
-\abstract{Social networks like Twitter are taking more and more importance nowadays, creating new ways of communication. They are also a useful tools for social and linguistic research, because there is a lot of public data available based on social interaction using such networks. The availability of this data is particularly important for less resourced languages, because it allows to apply current Natural Language Processing techniques to large amounts of unstructured data in order to analyze both the linguistic and social behavior of users based on the text they generate. In this work, the aim will be to study the linguistic and social aspects of young and adult people’s behavior based on their tweets’ contents and the social relations that can be structured from them. With this aim in mind, we have gathered over 6 million tweets written in Basque from more than 8000 users. First, we extracted and analyzed the crawled data to find the most popular topics. Then we classified each user’s tweet by age (young/adult) by establishing whether the writing style of each tweet is formal or informal. Several classification and topic modeling methods, both supervised and unsupervised, have been applied, offering each of them different insights with respect to the feasibility of the task with the available data. Second, we establish the relations that emerge between the users  based on their re-tweets, characterizing also the various communities that arise from the analysis of the data. We conclude that social research can be done using computer techniques, giving the opportunity both to segment communities based on demographic characteristics and to discover how they interact or relate to these, using large amounts of unstructured data.}
+\abstract{Social networks like Twitter are taking more and more importance nowadays, creating new ways of communication. They are also a useful tools for social and linguistic research, because there is a lot of public data available based on social interaction using such networks. The availability of this data is particularly important for less resourced languages, because it allows to apply current Natural Language Processing techniques to large amounts of unstructured data in order to analyze both the linguistic and social behavior of users based on the text they generate. In this work, the aim will be to study the linguistic and social aspects of young and adult people’s behavior based on their tweets’ contents and the social relations that can be structured from them. With this aim in mind, we have gathered over 6 million tweets written in Basque from more than 8000 users. First, we extracted and analyzed the crawled data to find the most popular topics. Then we classified each user’s tweet by age (young/adult) by establishing whether the writing style of each tweet is formal or informal. Several classification and topic modeling methods, both supervised and unsupervised, have been applied, offering each of them different insights with respect to the feasibility of the task with the available data. Second, we establish the relations that emerge between the users  based on their retweets, characterizing also the various communities that arise from the analysis of the data. We conclude that social research can be done using computational techniques such as Natural Language Processing, giving the opportunity both to segment communities based on demographic characteristics and to discover how they interact or relate to these, using large amounts of unstructured data available also for less resourced languages like Basque.}
 
 % Keywords
-\keyword{Social Informatics; Social Networks; Topics; Relations, Less-resourced languages; Information Extraction, Text Classification, Natural Language Processing}
+\keyword{Social Informatics; Social Networks; Topics; Relations, Less Resourced Languages; Information Extraction, Text Classification, Natural Language Processing}
 
 % The fields PACS, MSC, and JEL may be left empty or commented out if not applicable
 %\PACS{J0101}
