--- a/artikulua.tex
+++ b/artikulua.tex
@@ -672,7 +672,7 @@ The subgroups in the graph of \textbf{young} users (see Table \ref{tab:tab harr 
   \label{tab:tab harr gzt}
 \end{table}
 
-Focusing on the similarities, \textit{Basque language}, \textit{Nationalist left} and \textit{News} are important subgroups in both graphs. These common subgroups can be related to politics and immediacy, which are basic characteristics of identity in Twitter. With respect to the differences, it noticeable that subgroups related to leisure take a more central stage, such as \textit {Sports} and \textit{Music}. To finish, it is worth pointing out that young Basque users take Twitter as a channel to comment on everyday issues. The main topics in each of the subgroups within the young users graphs are the following:
+Focusing on the similarities, \textit{Basque language}, \textit{Nationalist left} and \textit{News} are important subgroups in both graphs. These common subgroups can be related to politics and immediacy, which are basic characteristics of identity in Twitter. With respect to the differences, it noticeable that subgroups related to leisure take a more central stage, such as \textit {Sports} and \textit{Music}. Moreover, it is worth pointing out that young Basque users take Twitter as a channel to comment on everyday issues. Finally, the main topics in each of the subgroups within the young users graphs are listed in the following:
 
 \begin{itemize}
 \item \textbf{Sports} (21.61\%): This subgroup, which includes most of the nodes which are considered roles models for the youths, is related to sports. The group is be made up of sports teams or organizations (@RealSociety, @RealSociedadEUS, @ASPEpelota, @SDEibar ...), as well as its athletes (@InigoMartinez, @AmetsTxurruka, @XabierUsabiaga, @Markelirizar ...). However, the most important nodes are sports journalists (@iBROKI, @XabierEuzkitze, @Imagreto, @bzarrabeitia, @TxetxuUbieta...) and the media (@berria, @euskaltelebista, @eitbkirolak, @euskadi\_irratia...). Once again, it can be clearly seen that the newspapers and TV media are the most important nodes.
